--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo"><img src="/images/stu.jpg" width="40%"></a>
+        <form action="#" class="search-bar">
+            <input type="text" placeholder="Search....">
+            <button type="submit"><i class='bx bx-search'></i></button>
+        </form>
         <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
-            <button class="btnLogin-popup">Login</button>
+            <a href="#" class="active" style="--i:1;">Home</a>
+            <a href="about.html" style="--i:2;">About</a>
+            <a href="#" style="--i:3;">Services</a>
+            <a href="#" style="--i:4;">Contact</a>
+            <a style="--i:5;"><button class="btnLogin-popup">Login</button></a>
         </nav>
     </header>
     <section class="section">
